# SantosApartmentPricing

./: .gitignore  README.md  pyproject.toml
artifacts/: data.csv  links_imovel.csv  metrics.txt  model.pkl  test.csv  test_processed.csv  train.csv  train_processed.csv
data/processed/: zapimoveis_santos.csv
data/raw/: imoveis.json
notebooks/: eda.ipynb  model.ipynb  scrapper.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/scrapper/: driver.py  imovel_scraper.py  list_scraper.py
