[tool.poetry]
name = "SantosApartmentPricing"
version = "0.1.0"
description = ""
authors = ["Matheus Santos <msantos18.ms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.5"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
selenium = "^4.32.0"
scipy = "^1.15.3"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
mlflow = "^2.22.0"
lightgbm = "^4.6.0"
catboost = "^1.2.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
